add properties for save args