@@ -1,75 +1,38 @@
 package parser;
 
 import org.apache.commons.cli.*;
-import confighandlers.DefaultConfigBuilder;
 
-import java.io.File;
 import java.io.FileNotFoundException;
+import java.io.FileOutputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashMap;
+import java.util.*;
 
 
 public class ParserArguments {
-    private HashMap<Character, Object> arguments;
 
     public ParserArguments(String[] args) {
-        DefaultConfigBuilder.CreateConfig.create();
+//        if (!Files.exists(Path.of(path))) DefaultConfigBuilder.CreateConfig.create();
         parse(args);
     }
-
-    private Options setOptions(String[] args) {
-        Options resultOptions = new Options();
-        Option shortStatsOption = new Option("s", false, "short statistic");
-        Option fullStatsOption = new Option("f", false, "full statistic");
-        Option overwriteOption = new Option("a", false, "overwrite output files");
-        Option prefixOption = new Option("p", true, "prefix for output files");
-        Option outputOption = new Option("o", true, "output directory");
-//        Option inputFileOption = new Option(null, true, "input file");
-
-        shortStatsOption.setRequired(false);
-        fullStatsOption.setRequired(false);
-        overwriteOption.setRequired(false);
-        prefixOption.setRequired(false);
-        outputOption.setRequired(false);
-//        inputFileOption.setRequired(false);
-
-        resultOptions.addOption(shortStatsOption);
-        resultOptions.addOption(fullStatsOption);
-        resultOptions.addOption(overwriteOption);
-        resultOptions.addOption(prefixOption);
-        resultOptions.addOption(outputOption);
-        resultOptions.addOption(shortStatsOption);
-//        resultOptions.addOption(inputFileOption);
-        return resultOptions;
-    }
-
     private void parse(String[] args) {
         CommandLineParser parser = new DefaultParser();
         HelpFormatter formatter = new HelpFormatter();
-        Options options = setOptions(args);
+        Options options = OptionsHandler.setOptions();
 
         try {
             CommandLine cmdLine = parser.parse(options, args, false);
-
-            System.out.println(Arrays.toString(cmdLine.getArgs()));
-
-            for (Option opt : cmdLine.getOptions()) {
-                System.out.println(opt.getOpt() + "   " + opt.getValue());
-            }
-//            System.out.println(Arrays.toString(cmdLine.getOptions()));
-            System.out.println(checkCorrectFiles(cmdLine.getArgs()));
+            PropertiesHandler.writePropertiesToFile(OptionsHandler.convertOptionsToProperties(cmdLine.getOptions()), checkCorrectFiles(cmdLine.getArgList()));
         } catch (ParseException e) {
             System.out.println(e.getMessage());
-            formatter.printHelp("utility-name", options, true);
-//            formatter.printHelp();
-
+            formatter.printHelp("file content filter utility", options, true);
         }
     }
-    private ArrayList<String> checkCorrectFiles(String [] files) {
+
+
+
+
+    private static ArrayList<String> checkCorrectFiles(List<String> files) {
         ArrayList<String> correctFiles = new ArrayList<>();
         for (String it : files) {
             try {
@@ -80,10 +43,12 @@ public class ParserArguments {
         }
         return correctFiles;
     }
-    private boolean checkValidPathFile(String path) throws FileNotFoundException {
-        Path p = Paths.get(path);
-        if (Files.exists(p)) return true;
-        throw new FileNotFoundException("File " + path + " not found");
+
+    private static boolean checkValidPathFile(String currentPath) throws FileNotFoundException {
+        Path p = Path.of(currentPath);
+        System.out.println(p + " -------------");
+        if (Files.exists(p) && Files.isWritable(p) && !Files.isDirectory(p)) return true;
+        throw new FileNotFoundException("File " + p + " not found");
     }
 
 }
